update checklist structure
